# LOLpy

./: .gitignore  Champion()_debug.py  Champion.py  ChampionImages()_debug.py  Champions()_debug.py  LOLpy.py  Olha ai eva.txt  README.md  champion_obj.py  image_retrieving.py  main.py  requirements.txt
LOLpy/: LOLpy.py  README.md  pyproject.toml  setup.py
LOLpy/LOLpy.egg-info/: PKG-INFO  SOURCES.txt
LOLpy/LOLpy_Vertuuu.egg-info/: PKG-INFO  SOURCES.txt
LOLpy/src/LOLpy_Vertuuu/: LOLpy.py
LOLpy/src/LOLpy_Vertuuu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LOLpy/tests/: Champion()_debug.py  ChampionImages()_debug.py  Champions()_debug.py  _configs.py  _run_all.py  integration_debug.py
LOLpy_django/: manage.py
LOLpy_django/LOLpy_project/: asgi.py  settings.py  urls.py  wsgi.py
LOLpy_django/homepage/: urls.py  views.py
LOLpy_django/homepage/templates/: index.html
LOLpy_django/mystaticfiles/css/: homepage.css
debug/: Champion()_debug.py  ChampionImages()_debug.py  Champions()_debug.py  configs.py  integration_debug.py  run_all.py
